Ansible/ACMKube/roles/prod/files/Kubernetes/nextcloud/nextcloud-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nextcloud-pvc
      containers:
        - image: nextcloud
          name: nextcloud
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
          - name: data
            mountPath: /var/www/html
