Ansible/ACMKube/roles/prod/files/Kubernetes/nextcloud/nextcloud-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service-http
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31300
  selector:
    app: nextcloud
  type: NodePort
