Ansible/ACMKube/roles/prod/files/Kubernetes/nextcloud/nextcloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-dashboard
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: nextcloud.acmuic.org
    http:
      paths:
      - backend:
          service:
            name: nextcloud-service-http
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nextcloud.acmuic.org
    secretName: nextcloud-ui-tls-cert
